@@ -568,6 +568,7 @@ vmCvar_t g_firstBloodMsg;
 vmCvar_t g_firstBloodMsgPos;
 vmCvar_t g_lastBloodMsg;
 vmCvar_t g_mode;
+vmCvar_t g_unlockedWeapons;
 
 #ifdef LUA_SUPPORT
 // Lua API
@@ -1148,6 +1149,7 @@ cvarTable_t		gameCvarTable[] = {
 	{ &g_firstBloodMsgPos, "g_firstBloodMsgPos", "2", 0 },
 	{ &g_lastBloodMsg, "g_lastBloodMsg", "^8And the final kill of this round goes to [a]^8!", 0 },
 	{ &g_mode, "g_mode", "0", 0 },
+	{ &g_unlockedWeapons, "g_unlockedWeapons", "0", CVAR_LATCH },
 
 #ifdef LUA_SUPPORT
 	// Lua API
@@ -2380,10 +2382,9 @@ pheno: change mode and announce the changes
 */
 const char modes[MODE_MAXMODES][3][32] =
 {
-	{ "Instant Spawn",	"^2on",			"^1off"		},
-	{ "Adrenaline",		"^2on",			"^1off"		},
-	{ "No Damage",		"^2on",			"^1off"		},
-	{ "Weapon",			"^2unlocked",	"^1locked"	}
+	{ "Instant Spawn",	"^2on",	"^1off" },
+	{ "Adrenaline",		"^2on",	"^1off" },
+	{ "No Damage",		"^2on",	"^1off" }
 };
 
 void G_ChangeMode()
@@ -2401,34 +2402,6 @@ void G_ChangeMode()
 			Com_sprintf( message, 128, "^1** ^3%s ^7mode %s %s", modes[i][0],
 				( 1 << i ) == MODE_ALLWEAPONS ? "changed to" : "is now",
 				modes[i][g_mode_lastValue & ( 1 << i ) ? 2 : 1] );
-
-			if( ( 1 << i ) == MODE_ALLWEAPONS &&
-				!( g_mode.integer & MODE_ALLWEAPONS ) ) {
-				int j, count = 0;
-				gentity_t *ent;
-
-				for( j = 0; j < level.numConnectedClients; j++ ) {
-					ent = g_entities + level.sortedClients[j];
-
-					if( !( ent->client->sess.sessionTeam == TEAM_AXIS ||
-							ent->client->sess.sessionTeam == TEAM_ALLIES ) ) {
-						continue;
-					}
-
-					// respawn the player
-					G_DropItems( ent );
-					ClientSpawn( ent, qfalse, qfalse, qtrue );
-
-					count++;
-				}
-
-				if( count > 0 ) {
-					Com_sprintf( message, 128,
-						"%s ^7(^3%d ^7player%s respawned)",
-						message, count, count > 1 ? "s" : "" );
-				}
-			}
-
 			G_PrintMessage( message, 2 );
 		}
 	}
